package.json - removed stylint and stylint-stylish - updated gulp-eslint to ^1.0.0 to use eslint v1.0+ - updated react 0.14 from beta1 to beta3 - removed gulp-shell - removed gulp-flowtype
bower.json
- updated router5
- updated router5-react
- updated system.js

eslint
- added chosen "recommended" rules from pre-1.0 migration guide
- added chosen "possible errors" rules section
- todo sections:
	- Best Practices
	- Stylistic Issues
	- ES6

--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,8 @@
     "tests"
   ],
   "dependencies": {
-    "router5": "~0.3.1",
-    "system.js": "~0.18.4",
-    "router5-react": "~0.1.0-alpha.7"
+    "router5": "~0.4.2",
+    "system.js": "~0.18.10",
+    "router5-react": "~0.1.1"
   }
 }
