--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,100 @@
 		"browser": true
 	},
 	"rules": {
+		"no-alert": 2,
+		"no-array-constructor": 2,
+		"no-caller": 2,
+		"no-empty-label": 2,
+		"no-eval": 2,
+		"no-extend-native": 2,
+		"no-extra-bind": 2,
+		"no-extra-parens": 2,
+		"no-implied-eval": 2,
+		"no-iterator": 2,
+		"no-label-var": 2,
+		"no-lone-blocks": 2,
+		"no-loop-func": 2,
+		"no-multi-spaces": [ 2, { 
+			"exceptions": {
+				"VariableDeclaration": true,
+				"ImportDeclaration": true
+			}
+		} ],
+		"no-multi-str": 2,
+		"no-native-reassign": 2,
+		"no-new": 2,
+		"no-new-func": 2,
+		"no-new-object": 2,
+		"no-new-wrappers": 2,
+		"no-octal-escape": 2,
+		"no-proto": 2,
+		"no-return-assign": 2,
+		"no-script-url": 2,
+		"no-sequences": 2,
+		"no-shadow": [ 2, {
+			"builtInGlobals": true,
+			"hoist": "all"
+		} ],
+		"no-shadow-restricted-names": 2,
+		"no-spaced-func": 2,
+		"no-trailing-spaces": [ 2, {
+			"skipBlankLines": true
+		} ],
+		"no-undef-init": 2,
+		"no-unused-expressions": 2,
+		"no-use-before-define": [ 2, "nofunc" ],
+		"no-with": 2,
+		"camelcase": 2,
+		"comma-spacing": 2,
+		"consistent-return": 2,
+		"curly": 2,
+		"dot-notation": 1,
+		"eqeqeq": [ 2, "smart" ],
+		"key-spacing": 2,
+		"quotes": [ 1, "double" ],
+		"semi": 2,
+		"semi-spacing": 2,
+		"space-infix-ops": [ 2, { "int32Hint": true } ],
+		"space-return-throw-case": 2,
+		"space-unary-ops": 2,
+		"strict": [ 2, "global" ],
+		"yoda": [2, "never", {
+		    "exceptRange": true
+		} ],
+
+		"no-process-exit": 2,
+
+
+		"no-cond-assign": 1,
+		"no-console": 1,
+		"no-constant-condition": 2,
+		"no-control-regex": 2,
+		"no-debugger": 1,
+		"no-func-assign": 2,
+		"no-inner-declarations": [ 2, "both" ],
+		"no-invalid-regexp": 2,
+		"no-irregular-whitespace": 2,
+		"no-negated-in-lhs": 2,
+		"no-obj-calls": 2,
+		"no-regex-spaces": 2,
+		"no-sparse-arrays": 2,
+		"no-unreachable": 2,
+		"use-isnan": 2,
+		"no-dupe-keys": 2,
+		"no-duplicate-case": 2,
+		"no-empty-character-class": 2,
+		"no-empty": 1,
+		"no-ex-assign": 2,
+		"no-extra-boolean-cast": 2,
+		"no-extra-semi": 2,
+		"valid-jsdoc": 1,
+		"valid-typeof": 2,
+		"no-unexpected-multiline": 2,
+
+
+
+
+
 		"indent": [
 			1,
 			"tab"
@@ -24,7 +118,9 @@
 	},
 	"ecmaFeatures": {
 		"modules": true,
-		"jsx": true
+		"jsx": true,
+		"regexYFlag": true,
+		"regexUFlag": true
 	},
 	"plugins": [
 		"react"
