--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,15 @@
 		"node": true,
 		"browser": true
 	},
+	"ecmaFeatures": {
+		"modules": true,
+		"jsx": true,
+		"regexYFlag": true,
+		"regexUFlag": true
+	},
+	"plugins": [
+		"react"
+	],
 	"rules": {
 		"no-alert": 2,
 		"no-array-constructor": 2,
@@ -55,8 +64,8 @@
 		"dot-notation": 1,
 		"eqeqeq": [ 2, "smart" ],
 		"key-spacing": 2,
-		"quotes": [ 1, "double" ],
-		"semi": 2,
+		"quotes": [ 2, "double" ],
+		"semi": [ 2, "always" ],
 		"semi-spacing": 2,
 		"space-infix-ops": [ 2, { "int32Hint": true } ],
 		"space-return-throw-case": 2,
@@ -65,6 +74,7 @@
 		"yoda": [2, "never", {
 		    "exceptRange": true
 		} ],
+
 
 		"no-process-exit": 2,
 
@@ -96,33 +106,75 @@
 		"no-unexpected-multiline": 2,
 
 
+		"accessor-pairs": 2,
+		"complexity": [ 1, 3 ],
+		"dot-location": [2, "property"],
+		"guard-for-in": 1,
+		"no-fallthrough": 1,
+		"no-floating-decimal": 2,
+		"no-invalid-this": 1,
+		"no-octal": 2,
+		"no-param-reassign": 2,
+		"no-redeclare": 2,
+		"no-self-compare": 2,
+		"no-throw-literal": 2,
+		"no-useless-call": 2,
+		"no-void": 2,
+		"no-warning-comments": [1, { "terms": [ "todo", "fixme", "xxx", "shame" ], "location": "start" } ],
+		"vars-on-top": 2,
+		"wrap-iife": [ 2, "inside" ],
 
 
+		"no-delete-var": 2,
+		"no-undef": 2,
+		"no-unused-vars": [2, { "vars": "all", "args": "after-used"} ],
 
-		"indent": [
-			1,
-			"tab"
-		],
-		"quotes": [
-			1,
-			"double"
-		],
-		"linebreak-style": [
-			1,
-			"unix"
-		],
-		"semi": [
-			2,
-			"always"
-		]
-	},
-	"ecmaFeatures": {
-		"modules": true,
-		"jsx": true,
-		"regexYFlag": true,
-		"regexUFlag": true
-	},
-	"plugins": [
-		"react"
-	]
+
+		"array-bracket-spacing": [2, "always"],
+		"brace-style": [ 2, "1tbs", { "allowSingleLine": true } ],
+		"comma-style": 2,
+		"computed-property-spacing": [ 2, "never" ],
+		"consistent-this": [ 2, "self" ],
+		"eol-last": 2,
+		"func-names": 2,
+		"func-style": [2, "declaration"],
+		"indent": [ 2, "tab", { "SwitchCase": 1 } ],
+		"lines-around-comment": [ 2, { "beforeBlockComment": true, "beforeLineComment": true, "allowBlockStart": true, "allowBlockEnd": true } ],
+		"linebreak-style": 2,
+		"newline-after-var": 2,
+		"no-array-constructor": 2,
+		"no-continue": 2,
+		"no-mixed-spaces-and-tabs": [ 2, "smart-tabs" ],
+		"no-nested-ternary": 2,
+		"no-unneeded-ternary": 2,
+		"object-curly-spacing": [ 2, "always" ],
+		"one-var": [ 2, {
+			"var": "always",
+			"let": "always",
+			"const": "never"
+		} ],
+		"operator-linebreak": 2,
+		"padded-blocks": [ 2, "never" ],
+		"quote-props": 2,
+		"space-after-keywords": 2,
+		"space-before-blocks": 2,
+		"space-before-function-paren": [ 2, "never" ],
+		"space-in-parens": [ 2, "never", { "exceptions": [ "{}", "[]", "()" ] } ],
+		"spaced-comment": 2,
+		"wrap-regex": 2,
+
+
+		"arrow-parens": 2,
+		"arrow-spacing": 2,
+		"constructor-super": 2,
+		"generator-star-spacing": [ 2, { "before": true, "after": false } ],
+		"no-class-assign": 2,
+		"no-const-assign": 2,
+		"no-this-before-super": 2,
+		"object-shorthand": 1,
+		"prefer-const": 1,
+		"prefer-spread": 1,
+		"prefer-reflect": 1,
+		"require-yield": 1
+	}
 }
