--- a/.eslintrc
+++ b/.eslintrc
@@ -44,10 +44,7 @@
 		"no-return-assign": 2,
 		"no-script-url": 2,
 		"no-sequences": 2,
-		"no-shadow": [ 2, {
-			"builtInGlobals": true,
-			"hoist": "all"
-		} ],
+		"no-shadow": [ 2, { "builtinGlobals": true, "hoist": "all" } ],
 		"no-shadow-restricted-names": 2,
 		"no-spaced-func": 2,
 		"no-trailing-spaces": [ 2, {
@@ -133,7 +130,7 @@
 		"array-bracket-spacing": [2, "always"],
 		"brace-style": [ 2, "1tbs", { "allowSingleLine": true } ],
 		"comma-style": 2,
-		"computed-property-spacing": [ 2, "never" ],
+		"computed-property-spacing": [ 2, "always" ],
 		"consistent-this": [ 2, "self" ],
 		"eol-last": 2,
 		"func-names": 2,
@@ -159,7 +156,7 @@
 		"space-after-keywords": 2,
 		"space-before-blocks": 2,
 		"space-before-function-paren": [ 2, "never" ],
-		"space-in-parens": [ 2, "never", { "exceptions": [ "{}", "[]", "()" ] } ],
+		"space-in-parens": [ 2, "always", { "exceptions": [ "empty" ] } ],
 		"spaced-comment": 2,
 		"wrap-regex": 2,
 
