tighten up config and shell, remove unnecessary dependencies, and update eslint rule

--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "douglas-prototype",
   "version": "1.1.0",
-  "description": "Babel, React, System.js, Gulp, Browsersync, Mocha/Chai, ESLint, Stylus, Stylint, Rx, Autoprefixer",
+  "description": "Babel, React, System.js, Gulp, Browsersync, Mocha/Chai, ESLint, Stylus, RxJS, Autoprefixer",
   "main": "gulpfile.babel.js",
   "scripts": {
-    "bogus": "stylint",
-    "stylint": "node node_modules/stylint/bin/stylint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp dev-clean-build-test-all"
   },
   "author": "The Douglas Company",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^5.2.0",
-    "babel": "^5.8.3",
     "browser-sync": "^2.8.0",
     "chai": "^3.2.0",
     "del": "^1.2.0",
@@ -27,13 +23,14 @@
     "gulp-newer": "^0.5.1",
     "gulp-plumber": "^1.0.1",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-stylus": "^2.0.5",
+    "gulp-stylus": "^2.0.6",
     "gulp-util": "^3.0.6",
     "merge2": "^0.3.6",
     "mocha": "^2.2.5",
+    "run-sequence": "^1.1.2"
+  },
+  "dependencies": {
     "react": "^0.14.0-beta3",
-    "run-sequence": "^1.1.2",
-    "rx": "^2.5.3",
-    "stylus": "^0.52.0"
+    "rx": "^2.5.3"
   }
 }
