make CRUD operations work on dumplings
- make deleting a dumpling work
- make creating a dumpling work
- use react with addons to get access to immutable helpers
- In ESLint config, don't require @returns for JSDoc comments

--- a/.eslintrc
+++ b/.eslintrc
@@ -97,7 +97,9 @@
 		"no-ex-assign": 2,
 		"no-extra-boolean-cast": 2,
 		"no-extra-semi": 2,
-		"valid-jsdoc": 1,
+		"valid-jsdoc": [ 1, {
+				"requireReturn": false
+			} ],
 		"valid-typeof": 2,
 		"no-unexpected-multiline": 2,
 
