--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "The Douglas Company",
   "license": "ISC",
   "devDependencies": {
+    "babel-plugin-object-assign": "^1.2.1",
     "browser-sync": "^2.8.0",
     "chai": "^3.2.0",
     "del": "^1.2.0",
