--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "douglas-prototype",
+  "name": "es6-gulp-systemjs-react-stylus",
   "version": "1.1.0",
   "description": "Babel, React, System.js, Gulp, Browsersync, Mocha/Chai, ESLint, Stylus, RxJS, Autoprefixer",
   "main": "gulpfile.babel.js",
   "scripts": {
     "test": "gulp dev-clean-build-test-all"
   },
-  "author": "The Douglas Company",
+  "author": "Your Mother",
   "license": "ISC",
   "devDependencies": {
     "babel-plugin-object-assign": "^1.2.1",
