--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,7 @@
 		"no-label-var": 2,
 		"no-lone-blocks": 2,
 		"no-loop-func": 2,
-		"no-multi-spaces": [ 2, { 
+		"no-multi-spaces": [ 2, {
 			"exceptions": {
 				"VariableDeclaration": true,
 				"ImportDeclaration": true
@@ -51,22 +51,22 @@
 		} ],
 		"no-undef-init": 2,
 		"no-unused-expressions": 2,
-		"no-use-before-define": [ 2, "nofunc" ],
+		"no-use-before-define": [2, "nofunc"],
 		"no-with": 2,
 		"camelcase": 2,
 		"comma-spacing": 2,
 		"consistent-return": 2,
 		"curly": 2,
 		"dot-notation": 1,
-		"eqeqeq": [ 2, "smart" ],
+		"eqeqeq": [2, "smart"],
 		"key-spacing": 2,
-		"quotes": [ 2, "double" ],
-		"semi": [ 2, "always" ],
+		"quotes": [2, "double"],
+		"semi": [2, "always"],
 		"semi-spacing": 2,
 		"space-infix-ops": [ 2, { "int32Hint": true } ],
 		"space-return-throw-case": 2,
 		"space-unary-ops": 2,
-		"strict": [ 2, "global" ],
+		"strict": [2, "global"],
 		"yoda": [2, "never", {
 		    "exceptRange": true
 		} ],
@@ -81,7 +81,7 @@
 		"no-control-regex": 2,
 		"no-debugger": 1,
 		"no-func-assign": 2,
-		"no-inner-declarations": [ 2, "both" ],
+		"no-inner-declarations": [2, "both"],
 		"no-invalid-regexp": 2,
 		"no-irregular-whitespace": 2,
 		"no-negated-in-lhs": 2,
@@ -105,7 +105,6 @@
 
 
 		"accessor-pairs": 2,
-		"complexity": [ 1, 3 ],
 		"dot-location": [2, "property"],
 		"guard-for-in": 1,
 		"no-fallthrough": 1,
@@ -118,9 +117,9 @@
 		"no-throw-literal": 2,
 		"no-useless-call": 2,
 		"no-void": 2,
-		"no-warning-comments": [1, { "terms": [ "todo", "fixme", "xxx", "shame" ], "location": "start" } ],
+		"no-warning-comments": [1, { "terms": ["todo", "fixme", "xxx", "shame"], "location": "start" } ],
 		"vars-on-top": 2,
-		"wrap-iife": [ 2, "inside" ],
+		"wrap-iife": [2, "inside"],
 
 
 		"no-delete-var": 2,
@@ -128,36 +127,36 @@
 		"no-unused-vars": [2, { "vars": "all", "args": "after-used"} ],
 
 
-		"array-bracket-spacing": [2, "always"],
+		"array-bracket-spacing": [2, "never"],
 		"brace-style": [ 2, "1tbs", { "allowSingleLine": true } ],
 		"comma-style": 2,
-		"computed-property-spacing": [ 2, "always" ],
-		"consistent-this": [ 2, "self" ],
+		"computed-property-spacing": [2, "never"],
+		"consistent-this": [2, "self"],
 		"eol-last": 2,
 		"func-names": 2,
 		"func-style": [2, "declaration"],
-		"indent": [ 2, "tab", { "SwitchCase": 1 } ],
+		"indent": [ 2, 2],
 		"lines-around-comment": [ 2, { "beforeBlockComment": true, "beforeLineComment": true, "allowBlockStart": true, "allowBlockEnd": true } ],
 		"linebreak-style": 2,
 		"newline-after-var": 2,
 		"no-array-constructor": 2,
 		"no-continue": 2,
-		"no-mixed-spaces-and-tabs": [ 2, "smart-tabs" ],
+		"no-mixed-spaces-and-tabs": [2, "smart-tabs"],
 		"no-nested-ternary": 2,
 		"no-unneeded-ternary": 2,
-		"object-curly-spacing": [ 2, "always" ],
+		"object-curly-spacing": [2, "always"],
 		"one-var": [ 2, {
 			"var": "always",
 			"let": "always",
 			"const": "never"
 		} ],
 		"operator-linebreak": 2,
-		"padded-blocks": [ 2, "never" ],
+		"padded-blocks": [2, "never"],
 		"quote-props": 2,
 		"space-after-keywords": 2,
 		"space-before-blocks": 2,
-		"space-before-function-paren": [ 2, "never" ],
-		"space-in-parens": [ 2, "always", { "exceptions": [ "empty" ] } ],
+		"space-before-function-paren": [2, "never"],
+		"space-in-parens": [ 2, "never"],
 		"spaced-comment": 2,
 		"wrap-regex": 2,
 
