--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "gulp-mocha": "^2.1.3",
     "gulp-newer": "^0.5.1",
     "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^6.0.0",
+    "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-stylus": "^2.0.6",
     "gulp-util": "^3.0.6",
     "merge2": "^0.3.6",
     "mocha": "^2.2.5",
