--- a/.eslintrc
+++ b/.eslintrc
@@ -1,177 +1,177 @@
 {
-	"env": {
-		"es6": true,
-		"node": true,
-		"browser": true
-	},
-	"ecmaFeatures": {
-		"modules": true,
-		"jsx": true,
-		"regexYFlag": true,
-		"regexUFlag": true
-	},
-	"plugins": [
-		"react"
-	],
-	"rules": {
-		"no-alert": 2,
-		"no-array-constructor": 2,
-		"no-caller": 2,
-		"no-empty-label": 2,
-		"no-eval": 2,
-		"no-extend-native": 2,
-		"no-extra-bind": 2,
-		"no-implied-eval": 2,
-		"no-iterator": 2,
-		"no-label-var": 2,
-		"no-lone-blocks": 2,
-		"no-loop-func": 2,
-		"no-multi-spaces": [ 2, {
-			"exceptions": {
-				"VariableDeclaration": true,
-				"ImportDeclaration": true
-			}
-		} ],
-		"no-multi-str": 2,
-		"no-native-reassign": 2,
-		"no-new": 2,
-		"no-new-func": 2,
-		"no-new-object": 2,
-		"no-new-wrappers": 2,
-		"no-octal-escape": 2,
-		"no-proto": 2,
-		"no-return-assign": 2,
-		"no-script-url": 2,
-		"no-sequences": 2,
-		"no-shadow": [ 2, { "builtinGlobals": true, "hoist": "all" } ],
-		"no-shadow-restricted-names": 2,
-		"no-spaced-func": 2,
-		"no-trailing-spaces": [ 2, {
-			"skipBlankLines": true
-		} ],
-		"no-undef-init": 2,
-		"no-unused-expressions": 2,
-		"no-use-before-define": [2, "nofunc"],
-		"no-with": 2,
-		"camelcase": 2,
-		"comma-spacing": 2,
-		"consistent-return": 2,
-		"curly": 2,
-		"dot-notation": 1,
-		"eqeqeq": [2, "smart"],
-		"key-spacing": 2,
-		"quotes": [2, "double"],
-		"semi": [2, "always"],
-		"semi-spacing": 2,
-		"space-infix-ops": [ 2, { "int32Hint": true } ],
-		"space-return-throw-case": 2,
-		"space-unary-ops": 2,
-		"strict": [2, "global"],
-		"yoda": [2, "never", {
-		    "exceptRange": true
-		} ],
+  "env": {
+    "es6": true,
+    "node": true,
+    "browser": true
+  },
+  "ecmaFeatures": {
+    "modules": true,
+    "jsx": true,
+    "regexYFlag": true,
+    "regexUFlag": true
+  },
+  "plugins": [
+    "react"
+  ],
+  "rules": {
+    "no-alert": 2,
+    "no-array-constructor": 2,
+    "no-caller": 2,
+    "no-empty-label": 2,
+    "no-eval": 2,
+    "no-extend-native": 2,
+    "no-extra-bind": 2,
+    "no-implied-eval": 2,
+    "no-iterator": 2,
+    "no-label-var": 2,
+    "no-lone-blocks": 2,
+    "no-loop-func": 2,
+    "no-multi-spaces": [ 2, {
+      "exceptions": {
+        "VariableDeclaration": true,
+        "ImportDeclaration": true
+      }
+    } ],
+    "no-multi-str": 2,
+    "no-native-reassign": 2,
+    "no-new": 2,
+    "no-new-func": 2,
+    "no-new-object": 2,
+    "no-new-wrappers": 2,
+    "no-octal-escape": 2,
+    "no-proto": 2,
+    "no-return-assign": 2,
+    "no-script-url": 2,
+    "no-sequences": 2,
+    "no-shadow": [ 2, { "builtinGlobals": true, "hoist": "all" } ],
+    "no-shadow-restricted-names": 2,
+    "no-spaced-func": 2,
+    "no-trailing-spaces": [ 2, {
+      "skipBlankLines": true
+    } ],
+    "no-undef-init": 2,
+    "no-unused-expressions": 2,
+    "no-use-before-define": [2, "nofunc"],
+    "no-with": 2,
+    "camelcase": 2,
+    "comma-spacing": 2,
+    "consistent-return": 2,
+    "curly": 2,
+    "dot-notation": 1,
+    "eqeqeq": [2, "smart"],
+    "key-spacing": 2,
+    "quotes": [2, "double"],
+    "semi": [2, "always"],
+    "semi-spacing": 2,
+    "space-infix-ops": [ 2, { "int32Hint": true } ],
+    "space-return-throw-case": 2,
+    "space-unary-ops": 2,
+    "strict": [2, "global"],
+    "yoda": [2, "never", {
+        "exceptRange": true
+    } ],
 
 
-		"no-process-exit": 2,
+    "no-process-exit": 2,
 
 
-		"no-cond-assign": 1,
-		"no-console": 1,
-		"no-constant-condition": 2,
-		"no-control-regex": 2,
-		"no-debugger": 1,
-		"no-func-assign": 2,
-		"no-inner-declarations": [2, "both"],
-		"no-invalid-regexp": 2,
-		"no-irregular-whitespace": 2,
-		"no-negated-in-lhs": 2,
-		"no-obj-calls": 2,
-		"no-regex-spaces": 2,
-		"no-sparse-arrays": 2,
-		"no-unreachable": 2,
-		"use-isnan": 2,
-		"no-dupe-keys": 2,
-		"no-duplicate-case": 2,
-		"no-empty-character-class": 2,
-		"no-empty": 1,
-		"no-ex-assign": 2,
-		"no-extra-boolean-cast": 2,
-		"no-extra-semi": 2,
-		"valid-jsdoc": [ 1, {
-				"requireReturn": false
-			} ],
-		"valid-typeof": 2,
-		"no-unexpected-multiline": 2,
+    "no-cond-assign": 1,
+    "no-console": 1,
+    "no-constant-condition": 2,
+    "no-control-regex": 2,
+    "no-debugger": 1,
+    "no-func-assign": 2,
+    "no-inner-declarations": [2, "both"],
+    "no-invalid-regexp": 2,
+    "no-irregular-whitespace": 2,
+    "no-negated-in-lhs": 2,
+    "no-obj-calls": 2,
+    "no-regex-spaces": 2,
+    "no-sparse-arrays": 2,
+    "no-unreachable": 2,
+    "use-isnan": 2,
+    "no-dupe-keys": 2,
+    "no-duplicate-case": 2,
+    "no-empty-character-class": 2,
+    "no-empty": 1,
+    "no-ex-assign": 2,
+    "no-extra-boolean-cast": 2,
+    "no-extra-semi": 2,
+    "valid-jsdoc": [ 1, {
+        "requireReturn": false
+      } ],
+    "valid-typeof": 2,
+    "no-unexpected-multiline": 2,
 
 
-		"accessor-pairs": 2,
-		"dot-location": [2, "property"],
-		"guard-for-in": 1,
-		"no-fallthrough": 1,
-		"no-floating-decimal": 2,
-		"no-invalid-this": 1,
-		"no-octal": 2,
-		"no-param-reassign": 2,
-		"no-redeclare": 2,
-		"no-self-compare": 2,
-		"no-throw-literal": 2,
-		"no-useless-call": 2,
-		"no-void": 2,
-		"no-warning-comments": [1, { "terms": ["todo", "fixme", "xxx", "shame"], "location": "start" } ],
-		"vars-on-top": 2,
-		"wrap-iife": [2, "inside"],
+    "accessor-pairs": 2,
+    "dot-location": [2, "property"],
+    "guard-for-in": 1,
+    "no-fallthrough": 1,
+    "no-floating-decimal": 2,
+    "no-invalid-this": 1,
+    "no-octal": 2,
+    "no-param-reassign": 2,
+    "no-redeclare": 2,
+    "no-self-compare": 2,
+    "no-throw-literal": 2,
+    "no-useless-call": 2,
+    "no-void": 2,
+    "no-warning-comments": [1, { "terms": ["todo", "fixme", "xxx", "shame"], "location": "start" } ],
+    "vars-on-top": 2,
+    "wrap-iife": [2, "inside"],
 
 
-		"no-delete-var": 2,
-		"no-undef": 2,
-		"no-unused-vars": [2, { "vars": "all", "args": "after-used"} ],
+    "no-delete-var": 2,
+    "no-undef": 2,
+    "no-unused-vars": [2, { "vars": "all", "args": "after-used"} ],
 
 
-		"array-bracket-spacing": [2, "never"],
-		"brace-style": [ 2, "1tbs", { "allowSingleLine": true } ],
-		"comma-style": 2,
-		"computed-property-spacing": [2, "never"],
-		"consistent-this": [2, "self"],
-		"eol-last": 2,
-		"func-names": 2,
-		"func-style": [2, "declaration"],
-		"indent": [ 2, 2],
-		"lines-around-comment": [ 2, { "beforeBlockComment": true, "beforeLineComment": true, "allowBlockStart": true, "allowBlockEnd": true } ],
-		"linebreak-style": 2,
-		"newline-after-var": 2,
-		"no-array-constructor": 2,
-		"no-continue": 2,
-		"no-mixed-spaces-and-tabs": [2, "smart-tabs"],
-		"no-nested-ternary": 2,
-		"no-unneeded-ternary": 2,
-		"object-curly-spacing": [2, "always"],
-		"one-var": [ 2, {
-			"var": "always",
-			"let": "always",
-			"const": "never"
-		} ],
-		"operator-linebreak": 2,
-		"padded-blocks": [2, "never"],
-		"quote-props": 2,
-		"space-after-keywords": 2,
-		"space-before-blocks": 2,
-		"space-before-function-paren": [2, "never"],
-		"space-in-parens": [ 2, "never"],
-		"spaced-comment": 2,
-		"wrap-regex": 2,
+    "array-bracket-spacing": [2, "never"],
+    "brace-style": [ 2, "1tbs", { "allowSingleLine": true } ],
+    "comma-style": 2,
+    "computed-property-spacing": [2, "never"],
+    "consistent-this": [2, "self"],
+    "eol-last": 2,
+    "func-names": 2,
+    "func-style": [2, "declaration"],
+    "indent": [ 2, 2],
+    "lines-around-comment": [ 2, { "beforeBlockComment": true, "beforeLineComment": true, "allowBlockStart": true, "allowBlockEnd": true } ],
+    "linebreak-style": 2,
+    "newline-after-var": 2,
+    "no-array-constructor": 2,
+    "no-continue": 2,
+    "no-mixed-spaces-and-tabs": [2, "smart-tabs"],
+    "no-nested-ternary": 2,
+    "no-unneeded-ternary": 2,
+    "object-curly-spacing": 0,
+    "one-var": [ 2, {
+      "var": "always",
+      "let": "always",
+      "const": "never"
+    } ],
+    "operator-linebreak": 2,
+    "padded-blocks": [2, "never"],
+    "quote-props": 2,
+    "space-after-keywords": 2,
+    "space-before-blocks": 2,
+    "space-before-function-paren": [2, "never"],
+    "space-in-parens": [ 2, "never"],
+    "spaced-comment": 2,
+    "wrap-regex": 2,
 
 
-		"arrow-parens": 2,
-		"arrow-spacing": 2,
-		"constructor-super": 2,
-		"generator-star-spacing": [ 2, { "before": true, "after": false } ],
-		"no-class-assign": 2,
-		"no-const-assign": 2,
-		"no-this-before-super": 2,
-		"object-shorthand": 1,
-		"prefer-const": 1,
-		"prefer-spread": 1,
-		"prefer-reflect": 1,
-		"require-yield": 1
-	}
+    "arrow-parens": 2,
+    "arrow-spacing": 2,
+    "constructor-super": 2,
+    "generator-star-spacing": [ 2, { "before": true, "after": false } ],
+    "no-class-assign": 2,
+    "no-const-assign": 2,
+    "no-this-before-super": 2,
+    "object-shorthand": 1,
+    "prefer-const": 1,
+    "prefer-spread": 1,
+    "prefer-reflect": 0,
+    "require-yield": 1
+  }
 }
