--- a/package.json
+++ b/package.json
@@ -1,38 +1,50 @@
 {
-  "name": "es6-gulp-systemjs-react-stylus",
+  "name": "es6-gulp-systemjs-react-sass",
   "version": "1.1.0",
-  "description": "Babel, React, System.js, Gulp, Browsersync, Mocha/Chai, ESLint, Stylus, RxJS, Autoprefixer",
+  "description": "Babel, React, System.js, Gulp, Browsersync, Mocha/Chai, ESLint, Sass, RxJS, Autoprefixer",
   "main": "gulpfile.babel.js",
   "scripts": {
-    "test": "gulp dev-clean-build-test-all"
+    "postinstall": "bower install",
+    "test": "gulp dev-clean-build-test-all",
+    "dev": "gulp",
+    "bower": "bower",
+    "gulp": "gulp"
   },
   "author": "Your Mother",
   "license": "ISC",
   "devDependencies": {
     "babel-plugin-object-assign": "^1.2.1",
     "browser-sync": "^2.8.0",
-    "chai": "^3.2.0",
     "del": "^1.2.0",
+    "eslint-friendly-formatter": "^1.2.2",
     "eslint-plugin-react": "^3.0.0",
+    "expect.js": "^0.3.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^5.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^1.0.0",
     "gulp-flatten": "^0.1.0",
-    "gulp-mocha": "^2.1.3",
+    "gulp-mocha": "^2.2.0",
     "gulp-newer": "^0.5.1",
     "gulp-plumber": "^1.0.1",
-    "gulp-postcss": "^6.0.0",
-    "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.6",
+    "history": "^1.17.0",
+    "memdown": "^1.1.0",
     "merge2": "^0.3.6",
-    "mocha": "^2.2.5",
-    "run-sequence": "^1.1.2"
+    "mocha": "^2.3.4",
+    "react-addons-test-utils": "^0.14.3",
+    "react-router": "^1.0.3",
+    "run-sequence": "^1.1.2",
+    "sinon": "^1.17.2",
+    "gulp-postcss": "^6.0.0",
+    "gulp-sass": "^2.0.4"
   },
   "dependencies": {
-    "react": "^0.14.0-beta3",
-    "rx": "^2.5.3"
+    "pouchdb": "^5.2.0",
+    "pouchdb-find": "^0.8.0",
+    "react": "^0.14.3",
+    "rx": "^4.0.7"
   }
 }
