Got some basics in for the different screens
Created a placeholder storage system while that's completed (GlobalStore.js)
Fixed gulpfile issues with sass compile
Added comments for increased awesomeness

--- a/.eslintrc
+++ b/.eslintrc
@@ -131,7 +131,7 @@
     "brace-style": [ 2, "1tbs", { "allowSingleLine": true } ],
     "comma-style": 2,
     "computed-property-spacing": [2, "never"],
-    "consistent-this": [2, "self"],
+    "consistent-this": 0,
     "eol-last": 2,
     "func-names": 2,
     "func-style": [2, "declaration"],
