--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-plugin-object-assign": "^1.2.1",
+    "bower": "^1.7.7",
     "browser-sync": "^2.8.0",
     "del": "^1.2.0",
     "eslint-friendly-formatter": "^1.2.2",
@@ -28,6 +29,8 @@
     "gulp-mocha": "^2.2.0",
     "gulp-newer": "^0.5.1",
     "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^6.0.0",
+    "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.6",
     "history": "^1.17.0",
@@ -37,9 +40,7 @@
     "react-addons-test-utils": "^0.14.3",
     "react-router": "^1.0.3",
     "run-sequence": "^1.1.2",
-    "sinon": "^1.17.2",
-    "gulp-postcss": "^6.0.0",
-    "gulp-sass": "^2.0.4"
+    "sinon": "^1.17.2"
   },
   "dependencies": {
     "pouchdb": "^5.2.0",
