--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Your Mother",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^5.8.35",
     "babel-plugin-object-assign": "^1.2.1",
     "bower": "^1.7.7",
     "browser-sync": "^2.8.0",
@@ -43,7 +44,7 @@
     "sinon": "^1.17.2"
   },
   "dependencies": {
-    "pouchdb": "^5.2.0",
+    "pouchdb": "^5.2.1",
     "pouchdb-find": "^0.8.0",
     "react": "^0.14.3",
     "rx": "^4.0.7"
