--- a/.eslintrc
+++ b/.eslintrc
@@ -136,7 +136,7 @@
     "func-names": 2,
     "func-style": [2, "declaration"],
     "indent": [ 2, 2],
-    "lines-around-comment": [ 2, { "beforeBlockComment": true, "beforeLineComment": true, "allowBlockStart": true, "allowBlockEnd": true } ],
+    "lines-around-comment": [ 2, { "beforeBlockComment": true, "beforeLineComment": false, "allowBlockStart": true, "allowBlockEnd": true } ],
     "linebreak-style": 2,
     "newline-after-var": 2,
     "no-array-constructor": 2,
@@ -157,7 +157,7 @@
     "space-before-blocks": 2,
     "space-before-function-paren": [2, "never"],
     "space-in-parens": [ 2, "never"],
-    "spaced-comment": 2,
+    "spaced-comment": 0,
     "wrap-regex": 2,
 
 
